[gd_scene load_steps=7 format=3 uid="uid://eifoucjqk2ut"]

[ext_resource type="Script" uid="uid://bq43t2jo6iswp" path="res://scripts/mesa.gd" id="1_hxkmd"]
[ext_resource type="PackedScene" uid="uid://rdsbsl6ag741" path="res://cenas/cartaTrem.tscn" id="3_gaxdi"]
[ext_resource type="PackedScene" uid="uid://dbrmi6ca20idk" path="res://cenas/pilhaTrem.tscn" id="4_btbph"]
[ext_resource type="PackedScene" uid="uid://ceclp48lo5e2d" path="res://cenas/cartaDestino.tscn" id="5_j7o1c"]
[ext_resource type="Script" uid="uid://dyj8xrwqgxvmk" path="res://scripts/Pilhas/pilhaExposta.gd" id="6_fx48a"]
[ext_resource type="PackedScene" uid="uid://wccsf37xgcrr" path="res://cenas/pilhaDestino.tscn" id="6_pe6d5"]

[node name="Mesa" type="CanvasLayer"]
script = ExtResource("1_hxkmd")

[node name="PilhaExposta" type="Container" parent="."]
custom_minimum_size = Vector2(250, 0)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
grow_horizontal = 0
size_flags_horizontal = 10
size_flags_vertical = 10
script = ExtResource("6_fx48a")

[node name="Carta" parent="." instance=ExtResource("3_gaxdi")]
visible = false
offset_left = 181.0
offset_top = 457.0
offset_right = 636.0
offset_bottom = 1140.0

[node name="PilhaTrem" parent="." instance=ExtResource("4_btbph")]
anchors_preset = -1
anchor_left = 0.939
anchor_top = 0.71
anchor_right = 0.939
anchor_bottom = 0.71
offset_left = -100.88
offset_top = -1.80005
offset_right = 99.1199
offset_bottom = 134.131
grow_horizontal = 0
grow_vertical = 0

[node name="CartaDestino" parent="." instance=ExtResource("5_j7o1c")]
visible = false
offset_left = 534.0
offset_top = 52.0
offset_right = 759.0
offset_bottom = 388.0

[node name="PilhaDestino" parent="." instance=ExtResource("6_pe6d5")]
anchors_preset = -1
anchor_left = 0.94
anchor_top = 0.907
anchor_right = 0.94
anchor_bottom = 0.907
offset_left = 90.2
offset_top = -59.5601
offset_right = 240.2
offset_bottom = 164.44
grow_horizontal = 0
grow_vertical = 0
rotation = 1.5708
scale = Vector2(0.8, 0.8)
